# Challenger-Alura

./: .dockerignore  .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  compose.yaml
Docs/plan/: README.md  despliegue_oci.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/evaluation/: retrieval_dataset.json  retrieval_report.json
backend/scripts/: __init__.py  evaluate_retrieval.py
backend/src/nebula_rag/: __init__.py  api.py  catalog.py  config.py  domain.py  errors.py  ingestion.py  loaders.py  providers.py  rag.py  reranker.py  smalltalk.py  vector_store.py
backend/tests/: fakes.py  test_api.py  test_catalog.py  test_evaluation.py  test_ingestion.py  test_loaders.py  test_main.py  test_providers.py  test_rag.py  test_reranker.py  test_smalltalk.py  test_vector_store.py
deploy/: oci-vm-setup.sh
documents/: guia_envios_entregas.md  politica_privacidad.md  politica_reembolsos_devoluciones.md  preguntas_frecuentes.md  terminos_condiciones.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  icons.tsx  styles.css
frontend/src/test/: setup.ts
